--- a/src/css/main.css
+++ b/src/css/main.css
@@ -71,3 +71,100 @@ Base Tiles
 	background: #311;
 	cursor: not-allowed; 
 }
+
+.tile.path:before {
+	content: '';
+	height: 0;
+	position: absolute;
+	width: 0;
+}
+
+.tile.dir-n:before,
+.tile.dir-s:before {
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+}
+
+.tile.dir-w:before,
+.tile.dir-e:before {
+	bottom: 0;
+	top: 0;
+	margin: auto 0;
+}
+
+.tile.dir-n:before {
+	-webkit-animation: loop-n 1000ms infinite, phase 1000ms infinite;
+	border-bottom: 4px solid rgba(255, 255, 255, 0.05);
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+}
+
+.tile.dir-s:before {
+	-webkit-animation: loop-s 1000ms infinite, phase 1000ms infinite;
+	border-top: 4px solid rgba(255, 255, 255, 0.05);
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+}
+
+.tile.dir-w:before {
+	-webkit-animation: loop-w 1000ms infinite, phase 1000ms infinite;
+	border-right: 4px solid rgba(255, 255, 255, 0.05);
+	border-top: 4px solid transparent;
+	border-bottom: 4px solid transparent;
+}
+
+.tile.dir-e:before {
+	-webkit-animation: loop-e 1000ms infinite, phase 1000ms infinite;
+	border-left: 4px solid rgba(255, 255, 255, 0.05);
+	border-top: 4px solid transparent;
+	border-bottom: 4px solid transparent;
+}
+
+@-webkit-keyframes phase {
+  0% {
+    opacity: 0;
+  }
+  50% {
+  	opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes loop-n {
+  0% {
+    bottom: 0;
+  }
+  100% {
+    bottom: 100%;
+  }
+}
+
+@-webkit-keyframes loop-s {
+  0% {
+    top: 0;
+  }
+  100% {
+    top: 100%;
+  }
+}
+
+@-webkit-keyframes loop-w {
+  0% {
+    right: 0;
+  }
+  100% {
+    right: 100%;
+  }
+}
+
+@-webkit-keyframes loop-e {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: 100%;
+  }
+}
