--- a/src/css/main.css
+++ b/src/css/main.css
@@ -67,7 +67,7 @@ Play State - Tiles - Base
 .tile:hover {
 	background: #666;
 	background: hsla(0, 0%, 100%, 0.2);
-	cursor: crosshair;
+	/*cursor: crosshair;*/
 	transition-duration: 0;
 }
 
@@ -368,17 +368,17 @@ Play State - Tower Select/Build
 ==============================================================================*/
 
 .build-menu-wrap {
-	background: hsla(0, 0%, 0%, 0.5);
+	background: hsla(0, 0%, 20%, 0.4);
 	bottom: 0;
-	cursor: not-allowed;
+	/*cursor: not-allowed;*/
 	left: 0;
 	opacity: 0;
 	position: absolute;
 	right: 0;
 	top: 0;
 	transition:
-		visibility 300ms 300ms,
-		opacity 300ms
+		visibility 150ms 150ms,
+		opacity 150ms
 	;
 	visibility: hidden;
 	z-index: 200;
@@ -431,8 +431,8 @@ Play State - Tower Select/Build
 .pos-e .build-f { left: 170px; }
 
 .build-info {
-	background: hsla(0, 0%, 20%, 0.5);
-	border: 1px solid hsla(0, 0%, 100%, 0.2);
+	background: hsla(0, 0%, 0%, 0.5);
+	/*border: 1px solid hsla(0, 0%, 100%, 0.2);*/
 	font-size: 13px;
 	left: 0;
 	line-height: 1.7;
