--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,16 +7,24 @@ General
 *,
 *:before,
 *:after {
-	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+
+	-webkit-transition-duration: 500ms;
 	transition-duration: 500ms;
+
+	-webkit-transition-property: none;
 	transition-property: none;
 }
 
+html,
 body {
-	background: #111;
-	background: -webkit-radial-gradient(#282828, #060606);
+	height: 100%;
+}
+
+body {
+	background: #181818;
+	background: radial-gradient(ellipse at center,  #282828 0%,#060606 100%);
 	font-family: sans-serif;
 	overflow: hidden;
 	-webkit-touch-callout: none;
@@ -37,8 +45,15 @@ Game
 .g {
 	box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.5);
 	left: 50%;
+	opacity: 0;
 	position: absolute;
+	-webkit-transition: opacity 500ms;
+	transition: opacity 500ms;
 	top: 50%;
+}
+
+.g.loaded {
+	opacity: 1;
 }
 
 /* state */
@@ -61,14 +76,15 @@ Play State - Tiles - Base
 	left: 0;
 	position: absolute;
 	top: 0;
+	-webkit-transition-property: background;
 	transition-property: background;
 }
 
 .tile:hover {
 	background: #666;
 	background: hsla(0, 0%, 100%, 0.2);
-	/*cursor: crosshair;*/
-	transition-duration: 0;
+	-webkit-transition-duration: 0ms;
+	transition-duration: 0ms;
 }
 
 /*==============================================================================
@@ -126,6 +142,11 @@ Play State - Buttons - General
 	position: relative;
 	text-align: center;
 	text-shadow: 0 1px 1px #000;
+	-webkit-transition-property:
+		background,
+		box-shadow,
+		color
+	;
 	transition-property:
 		background,
 		box-shadow,
@@ -134,7 +155,8 @@ Play State - Buttons - General
 }
 
 .b:before {
-	background: -webkit-linear-gradient(transparent, hsla(0, 0%, 100%, 0.075));
+	background: -moz-linear-gradient(top, transparent 0%, hsla(0, 0%, 100%, 0.075) 100%);
+	background: linear-gradient(to bottom, transparent 0%, hsla(0, 0%, 100%, 0.075) 100%);
 	content: '';
 	height: 50%;
 	left: 0;
@@ -146,7 +168,8 @@ Play State - Buttons - General
 .b:hover {
 	background: #444;
 	color: #fff;
-	transition-duration: 0;
+	-webkit-transition-duration: 0ms;
+	transition-duration: 0ms;
 }
 
 .s1 { width: 39px; }
@@ -211,63 +234,41 @@ Play State - Buttons - Attacks
 
 .b-e {
 	background: hsl(120, 30%, 20%);
-	/*box-shadow: inset 0 -3px 0 hsl(120, 70%, 60%);*/
 	color: hsl(120, 70%, 60%);
 }
 
 .b-e:hover {
 	background: hsl(120, 40%, 30%);
-	/*box-shadow: inset 0 -3px 0 hsl(120, 80%, 70%);*/
 	color: hsl(120, 90%, 80%);
 }
 
 .b-w {
 	background: hsl(200, 30%, 20%);
-	/*box-shadow: inset 0 -3px 0 hsl(200, 70%, 60%);*/
 	color: hsl(200, 70%, 60%);
 }
 
 .b-w:hover {
 	background: hsl(200, 40%, 30%);
-	/*box-shadow: inset 0 -3px 0 hsl(200, 80%, 70%);*/
 	color: hsl(200, 90%, 80%);
 }
-/*
-.b-a {
-	background: hsl(0, 0%, 30%);
-	box-shadow: inset 0 -3px 0 hsl(0, 0%, 70%);
-	color: hsl(0, 0%, 70%);
-}
-
-.b-a:hover {
-	background: hsl(0, 0%, 40%);
-	box-shadow: inset 0 -3px 0 hsl(0, 0%, 80%);
-	color: hsl(0, 0%, 90%);
-}
-*/
 
 .b-a {
 	background: hsl(60, 30%, 20%);
-	/*box-shadow: inset 0 -3px 0 hsl(60, 70%, 60%);*/
 	color: hsl(60, 70%, 60%);
 }
 
 .b-a:hover {
 	background: hsl(60, 40%, 30%);
-	/*box-shadow: inset 0 -3px 0 hsl(60, 80%, 70%);*/
 	color: hsl(60, 90%, 80%);
 }
 
-
 .b-f {
 	background: hsl(0, 30%, 20%);
-	/*box-shadow: inset 0 -3px 0 hsl(0, 70%, 60%);*/
 	color: hsl(0, 70%, 60%);
 }
 
 .b-f:hover {
 	background: hsl(0, 40%, 30%);
-	/*box-shadow: inset 0 -3px 0 hsl(0, 80%, 70%);*/
 	color: hsl(0, 90%, 80%);
 }
 
@@ -310,6 +311,11 @@ Play State - Labels and Displays
 	position: relative;
 	text-align: center;
 	text-shadow: 0 1px 1px #000;
+	-webkit-transition-property:
+		background,
+		box-shadow,
+		color
+	;
 	transition-property:
 		background,
 		box-shadow,
@@ -319,7 +325,9 @@ Play State - Labels and Displays
 
 .l:before,
 .d:before {
-	background: -webkit-linear-gradient(transparent, hsla(0, 0%, 100%, 0.075));
+	background: -moz-linear-gradient(top, transparent 0%, hsla(0, 0%, 100%, 0.075) 100%);
+	background: linear-gradient(to bottom, transparent 0%, hsla(0, 0%, 100%, 0.075) 100%);
+
 	content: '';
 	height: 50%;
 	left: 0;
@@ -370,12 +378,15 @@ Play State - Tower Select/Build
 .build-menu-wrap {
 	background: hsla(0, 0%, 20%, 0.4);
 	bottom: 0;
-	/*cursor: not-allowed;*/
 	left: 0;
 	opacity: 0;
 	position: absolute;
 	right: 0;
 	top: 0;
+	-webkit-transition:
+		visibility 150ms 150ms,
+		opacity 150ms
+	;
 	transition:
 		visibility 150ms 150ms,
 		opacity 150ms
@@ -386,7 +397,8 @@ Play State - Tower Select/Build
 
 .build-menu-open .build-menu-wrap {
 	opacity: 1;
-	transition-delay: 0;
+	-webkit-transition-delay: 0ms;
+	transition-delay: 0ms;
 	visibility: visible;
 }
 
@@ -401,16 +413,32 @@ Play State - Tower Select/Build
 .build-selects {
 	background: hsla(0, 0%, 0%, 0.75);
 	height: 80px;
+	position: relative;
 	width: 100%;
+}
+
+.build-selects:before {
+	background: -moz-linear-gradient(top, transparent 0%, hsla(0, 0%, 100%, 0.1) 100%);
+	background: linear-gradient(to bottom, transparent 0%, hsla(0, 0%, 100%, 0.1) 100%);
+	content: '';
+	height: 50%;
+	left: 0;
+	pointer-events: none;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 2;
 }
 
 .build-select {
 	background: #fff;
+	box-shadow: inset 0 0 0 20px hsla(0, 0%, 100%, 0);
 	cursor: pointer;
 	height: 40px;
 	position: absolute;
 	top: 20px;
-	transition: background 300ms;
+	-webkit-transition: background 300ms, box-shadow 300ms;
+	transition: background 300ms, box-shadow 300ms;
 	width: 40px;
 }
 
@@ -419,9 +447,17 @@ Play State - Tower Select/Build
 	border: 2px dashed #fff;
 	cursor: default;
 	-webkit-animation: build-d 500ms ease-in-out infinite alternate;
+	animation: build-d 500ms ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes build-d {
+	to {
+		box-shadow: inset 0 0 0 0 transparent;
+		opacity: 0;
+	}
+}
+
+@keyframes build-d {
 	to {
 		box-shadow: inset 0 0 0 0 transparent;
 		opacity: 0;
@@ -434,10 +470,15 @@ Play State - Tower Select/Build
 .build-a { background: hsl(60, 90%, 60%); }
 .build-f { background: hsl(0, 90%, 60%); }
 
-.build-e:hover { background: hsl(120, 100%, 80%); }
-.build-w:hover { background: hsl(200, 100%, 80%); }
-.build-a:hover { background: hsl(60, 100%, 80%); }
-.build-f:hover { background: hsl(0, 100%, 80%); }
+.build-e:hover,
+.build-w:hover,
+.build-a:hover,
+.build-f:hover { box-shadow: inset 0 0 0 2px hsla(0, 0%, 100%, 0.35); }
+
+.build-e:hover { background: hsl(120, 80%, 30%); }
+.build-w:hover { background: hsl(200, 80%, 30%); }
+.build-a:hover { background: hsl(60, 80%, 30%); }
+.build-f:hover { background: hsl(0, 80%, 30%); }
 
 .pos-w .build-d { left: 20px; }
 .pos-w .build-e { left: 70px; }
@@ -452,21 +493,23 @@ Play State - Tower Select/Build
 .pos-e .build-f { left: 170px; }
 
 .build-info {
-	background: hsla(0, 0%, 0%, 0.5);
+	background: hsla(0, 0%, 0%, 0.75);
 	font-size: 13px;
-	height: 135px;
+	height: 145px;
 	left: 0;
 	line-height: 1.7;
 	opacity: 0;
 	padding: 0 20px;
 	position: absolute;
+	-webkit-transition: opacity 300ms 300ms;
 	transition: opacity 300ms 300ms;
 	width: 100%;
 }
 
 .hover-build-select .build-info {
 	opacity: 1;
-	transition-delay: 0;
+	-webkit-transition-delay: 0ms;
+	transition-delay: 0ms;
 }
 
 .pos-n .build-info {
@@ -480,24 +523,23 @@ Play State - Tower Select/Build
 }
 
 .build-title {
+	border-bottom: 1px solid #333;
 	font-size: 16px;
 	font-weight: bold;
+	margin-bottom: 7px;
+	padding-bottom: 7px;
 }
 
-.build-type {
-	color: #fff
+.build-title i {
+	color: #fff;
+	font-style: normal;
+	margin-right: 14px;
 }
 
 .hover-e .build-type { color: hsl(120, 90%, 60%); }
 .hover-w .build-type { color: hsl(200, 90%, 60%); }
 .hover-a .build-type { color: hsl(60, 90%, 60%); }
 .hover-f .build-type { color: hsl(0, 90%, 60%); }
-
-.build-divider {
-	color: #666;
-	font-weight: normal;
-	margin: 0 8px;
-}
 
 .build-cost {
 	color: #fff;
